add privaçy and terms of use conditions remove simulation from Portfolio Modal fix contac js

--- a/Portfolio/AcidentesPessoais.html
+++ b/Portfolio/AcidentesPessoais.html
@@ -8,10 +8,10 @@
             <p>Esteja preparado para qualquer urgência.</p>
             <h3 class="text-uppercase">Acidentes Pessoais Familiar</h3>
             <p>Proteja-se e proteja os seus familiares em caso de qualquer urgência.</p>
-            <button class="btn btn-primary showhide" type="button">
+            <a class=" js-scroll-trigger showhide btn btn-primary" href="#contact">
                 <i class="fas fa-angle-right"></i>
                 Simulação</button>
-            </div>
+            </a>
     </div>
     </div>
     <div class="col-sm" style="display:none;" id="simulationDialog">
