--- a/Portfolio/Habitacao.html
+++ b/Portfolio/Habitacao.html
@@ -9,9 +9,10 @@
                     recheio (dependendo do contratado) por ações que não são da responsabilidade do proprietário como
                     fenómenos naturais, incendio, raio e explosão, furto ou roubo, entre outros.</p>
                 <p>O seguro de habitação inclui também a cobertura de responsabilidade civil.</p>
-                <button class="btn btn-primary showhide" type="button">
+                <a class=" js-scroll-trigger showhide btn btn-primary" href="#contact">
                     <i class="fas fa-angle-right"></i>
                     Simulação</button>
+                </a>
             </div>
         </div>
     </div>
