--- a/Portfolio/Vida.html
+++ b/Portfolio/Vida.html
@@ -7,10 +7,10 @@
             <h3 class="text-uppercase">vida</h3>
             <p class="item-intro text-muted">Seguro obrigatório.</p>
             <p>O seguro de vida surge como forma de prevenir consequências de grande impacto na vida dos cidadãos indemnizando os beneficiários os custos acrescidos resultantes dos danos de morte, invalidez ou acidente.</p>
-            <button class="btn btn-primary showhide" type="button">
+            <a class=" js-scroll-trigger showhide btn btn-primary" href="#contact">
                 <i class="fas fa-angle-right"></i>
                 Simulação</button>
-            </div>
+            </a>
     </div>
     </div>
     <div class="col-sm" style="display:none;" id="simulationDialog">
