--- a/Portfolio/AcidentesDeTrabalho.html
+++ b/Portfolio/AcidentesDeTrabalho.html
@@ -3,15 +3,15 @@
     <div class="container">
             <div class="modal-body">
             <!-- Project Details Go Here -->
-            <i class="fas fa-4x fa-user-md text-primary mb-4"></i>
+            <i class="fas fa-4x fa-people-carry text-primary mb-4"></i>
             <h3 class="text-uppercase">ACIDENTES de TRABALHO</h3>
             <p class="item-intro text-muted">Seguro obrigatório.</p>
             <p>O condutor de um veículo é responsável por todos os danos que possa causar na circulação rodoviária, nomeadamente em caso de acidente que resulta muitas vezes em quantias elevadas.</p>
             <p>O seguro automóvel pretende proteger os lesados para que todos os prejuízos sejam pagos independentemente de o responsável pelo acidente ter ou não condições financeiras para o fazer.</p>
-            <button class="btn btn-primary showhide" type="button">
+            <a class=" js-scroll-trigger showhide btn btn-primary" href="#contact">
                 <i class="fas fa-angle-right"></i>
                 Simulação</button>
-            </div>
+            </a>
     </div>
     </div>
     <div class="col-sm" style="display:none;" id="simulationDialog">
