--- a/Portfolio/Automovel.html
+++ b/Portfolio/Automovel.html
@@ -1,55 +1,67 @@
 <div class="row">
     <div class="col-sm" style="border-right: grey 1px solid">
-    <div class="container">
-            <div class="modal-body">
-            <!-- Project Details Go Here -->
-            <i class="fas fa-4x fa-car text-primary mb-4"></i>
-            <h3 class="text-uppercase">Automóvel</h3>
-            <p class="item-intro text-muted">Seguro obrigatório.</p>
-            <p>O condutor de um veículo é responsável por todos os danos que possa causar na circulação rodoviária, nomeadamente em caso de acidente que resulta muitas vezes em quantias elevadas.</p>
-            <p>O seguro automóvel pretende proteger os lesados para que todos os prejuízos sejam pagos independentemente de o responsável pelo acidente ter ou não condições financeiras para o fazer.</p>
-            <button class="btn btn-primary showhide" type="button">
-                <i class="fas fa-angle-right"></i>
-                Simulação</button>
-            </div>
+        <div class="container">
+                <div class="modal-body">
+                <!-- Project Details Go Here -->
+                <i class="fas fa-4x fa-car text-primary mb-4"></i>
+                <h3 class="text-uppercase">Automóvel</h3>
+                <p class="item-intro text-muted">Seguro obrigatório.</p>
+                <p>O condutor de um veículo é responsável por todos os danos que possa causar na circulação rodoviária, nomeadamente em caso de acidente que resulta muitas vezes em quantias elevadas.</p>
+                <p>O seguro automóvel pretende proteger os lesados para que todos os prejuízos sejam pagos independentemente de o responsável pelo acidente ter ou não condições financeiras para o fazer.</p>
+                
+                <a class=" js-scroll-trigger showhide btn btn-primary" href="#contact">
+                    <i class="fas fa-angle-right"></i>
+                    Simulação</button>
+                </a>
+        </div>
     </div>
-    </div>
-    <div class="col-sm" style="display:none;" id="simulationDialog">
-    <form id="SimulationForm" name="sentMessage" novalidate="novalidate">
+    <!-- <div class="col-sm" style="display:none;" id="simulationDialog">
+        <form id="SimulationForm" name="sentMessage" novalidate="novalidate">
         <div class="row">
         <div class="col-md-6">
             <div class="form-group">
-            Nome
-            <input class="form-control" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name.">
-            <p class="help-block text-danger"></p>
+                Nome
+                <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name.">
+                <p class="help-block text-danger"></p>
             </div>
             <div class="form-group">
-            Marca
-            <input class="form-control" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address.">
-            <p class="help-block text-danger"></p>
+                Email
+                <input class="form-control" id="email" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address.">
+                <p class="help-block text-danger"></p>
             </div>
             <div class="form-group">
-            Modelo
-            <input class="form-control" type="tel" placeholder="Your Phone *" required="required" data-validation-required-message="Please enter your phone number.">
-            <p class="help-block text-danger"></p>
+                Phone Number
+                <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required="required" data-validation-required-message="Please enter your phone number.">
+                <p class="help-block text-danger"></p>
             </div>
+            <div class="form-group">
+                Marca
+                <input class="form-control" id="brand" type="text" placeholder="Car Brand *" required="required" data-validation-required-message="Please enter your Car Brand.">
+                <p class="help-block text-danger"></p>
+            </div>
+            <div class="form-group">
+                Modelo
+                <input class="form-control" id="model" type="text" placeholder="Car Model *" required="required" data-validation-required-message="Please enter your Car Model.">
+                <p class="help-block text-danger"></p>
+            </div>
+            
         </div>
         <div class="col-md-6">
             <div class="form-group">
-            <textarea class="form-control" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
+            <textarea class="form-control" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
             <p class="help-block text-danger"></p>
             </div>
         </div>
         <div class="clearfix"></div>
         <div class="col-lg-12 text-center">
             <div id="success"></div>
-            <button class="btn btn-primary" type="submit" id="sendSimulation">
+            <button class="btn btn-primary" name="send" value="Send"  id="sendMessageButton">
             <i class="fas fa-angle-right"></i>
             Pedir Simulação</button>
         </div>
         </div>
     </form>
-    </div>
+    </div> -->
 </div>
 
 
