--- a/Portfolio/Outros.html
+++ b/Portfolio/Outros.html
@@ -8,10 +8,10 @@
             <p class="item-intro text-muted">Seguro obrigatório.</p>
             <p>O condutor de um veículo é responsável por todos os danos que possa causar na circulação rodoviária, nomeadamente em caso de acidente que resulta muitas vezes em quantias elevadas.</p>
             <p>O seguro automóvel pretende proteger os lesados para que todos os prejuízos sejam pagos independentemente de o responsável pelo acidente ter ou não condições financeiras para o fazer.</p>
-            <button class="btn btn-primary showhide" type="button">
+            <a class=" js-scroll-trigger showhide btn btn-primary" href="#contact">
                 <i class="fas fa-angle-right"></i>
                 Simulação</button>
-            </div>
+            </a>
     </div>
     </div>
     <div class="col-sm" style="display:none;" id="simulationDialog">
