--- a/Portfolio/Saude.html
+++ b/Portfolio/Saude.html
@@ -7,10 +7,10 @@
             <h3 class="text-uppercase">saude</h3>
             <p class="item-intro text-muted">Seguro obrigatório.</p>
             <p>Porque a saúde é importante, este seguro cobre todos os riscos associados aos cuidados de saúde necessários ao segurado conforme coberturas escolhidas, por reembolso das despesas e/ou pagamento direto aos prestadores de cuidados de saúde.</p>
-            <button class="btn btn-primary showhide" type="button">
+            <a class=" js-scroll-trigger showhide btn btn-primary" href="#contact">
                 <i class="fas fa-angle-right"></i>
                 Simulação</button>
-            </div>
+            </a>
     </div>
     </div>
     <div class="col-sm" style="display:none;" id="simulationDialog">
