--- a/Portfolio/Viagem.html
+++ b/Portfolio/Viagem.html
@@ -7,10 +7,10 @@
             <h3 class="text-uppercase">viagem</h3>
             <p class="item-intro text-muted">Seguro obrigatório.</p>
             <p>Viaje tranquilo para qualquer destino sabendo que o seguro de viagem lhe garante a melhor assistência em Portugal e no estrangeiro e consciente de que qualquer problema tem assegurada uma solução em qualquer parte do mundo.</p>
-            <button class="btn btn-primary showhide" type="button">
+            <a class=" js-scroll-trigger showhide btn btn-primary" href="#contact">
                 <i class="fas fa-angle-right"></i>
                 Simulação</button>
-            </div>
+            </a>
     </div>
     </div>
     <div class="col-sm" style="display:none;" id="simulationDialog">
