--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <!--<img id="logoMSL" class="navbar-brand js-scroll-trigger" src="img/logos/msl3.png" href="#page-top">-->
-      
-      <a class="navbar-brand js-scroll-trigger" href="#page-top" style="color:White;">
-        <img src="https://getbootstrap.com/docs/4.6/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
-        <label style="line-height: 30px;"> M S L</label> </a>
+      <a class="navbar-brand js-scroll-trigger">
+        <img id="logoMSL" class="d-inline-block align-top img-top" height="100" src="img/logos/msl-logo_v2_BRANCO_SFundo.png" href="#page-top">
+      </a>
+      <!-- <a class="navbar-brand js-scroll-trigger" href="#page-top" style="color:White;"> 
+        <img id="logoMSL" src="img/logos/msl-BRANCO.png" href="#page-top" width="30" height="30" class="d-inline-block align-top" alt="">-->
       <!--<a class="navbar-brand">Mediadora de Seguros do Lima</a>-->
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
@@ -62,6 +62,12 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contactos</a>
           </li>
+          <li class="nav-item">
+            <div class="nav-link js-scroll-trigger">  
+              <i class="fas fa-phone"></i>
+              +351 258 826 932
+            </div>
+          </li>   
         </ul>
       </div>
     </div>
@@ -71,6 +77,7 @@
   <header class="masthead">
     <div id="particles-js"></div>
     <div class="container introduction">
+        <img id="logoMSL" class="img-center" src="img/logos/msl-logo_v1_SFundo.png">
       <div class="intro-text">
        <div class="intro-lead-in">Soluções para a sua realidade</div>
         <div class="intro-lead-in">Podemos ajudar?</div>
