fix privacidade; add more particules

--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
         <div class="col-md-4">
           <ul class="list-inline quicklinks">
             <li class="list-inline-item">
-              <div  class="modelLoader" data-item="Privacidade" data-toggle="modal" data-target="#portfolioModal" >Políticas de Privacidade</div>
+              <div  class="modelLoader" data-item="privacidade" data-toggle="modal" data-target="#portfolioModal" >Políticas de Privacidade</div>
             </li>
             <li class="list-inline-item">
               <div  class="modelLoader" data-item="TermoDeUso" data-toggle="modal" data-target="#portfolioModal" >Termos e Condições</div>
