--- a/Portfolio/Outros.html
+++ b/Portfolio/Outros.html
@@ -5,9 +5,14 @@
             <!-- Project Details Go Here -->
             <i class="fas fa-4x fa-plus text-primary mb-4"></i>
             <h3 class="text-uppercase">outros</h3>
-            <p class="item-intro text-muted">Seguro obrigatório.</p>
-            <p>O condutor de um veículo é responsável por todos os danos que possa causar na circulação rodoviária, nomeadamente em caso de acidente que resulta muitas vezes em quantias elevadas.</p>
-            <p>O seguro automóvel pretende proteger os lesados para que todos os prejuízos sejam pagos independentemente de o responsável pelo acidente ter ou não condições financeiras para o fazer.</p>
+            <ul style="margin: 20px auto; max-width: 250px; text-align: left;">
+                <li style="list-style: disc;">Seguro comércio</li>
+                <li style="list-style: disc;">Seguro responsabilidade civil</li>
+                <li style="list-style: disc;">Seguro para alojamento local</li>
+                <li style="list-style: disc;">Seguro de transportes</li>
+                <li style="list-style: disc;">Seguro BIKE</li>
+                <li style="list-style: disc;">Seguro Embarcações</li>
+            </ul>
             <a class=" js-scroll-trigger showhide btn btn-primary" href="#contact">
                 <i class="fas fa-angle-right"></i>
                 Simulação</button>
