--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     <div class="container introduction">
         <img id="logoMSL" class="img-center" src="img/logos/msl-logo_v1_SFundo.png">
       <div class="intro-text">
-       <div class="intro-lead-in">Soluções para a sua realidade</div>
-        <div class="intro-lead-in">Podemos ajudar?</div>
+       <div class="intro-lead-in">Temos a melhor solução para si!</div>
+        <div class="intro-lead-in">Conte com a nossa equipa!</div>
         <!-- <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger shadow-lg"
            href="#services">SABER MAIS</a> -->
       </div>
@@ -103,7 +103,7 @@
             <i class="fas fa-id-badge fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Emissão e gestão de Apólices</h4>
-          <p class="text-muted">Criação e gestão do contrato no momento, recomendando sempre o melhor para as suas necessidades.</p>
+          <p class="section-subheading text-muted">Criação e gestão do contrato no momento, recomendando sempre o melhor para as suas necessidades.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
@@ -111,8 +111,7 @@
             <i class="fas fa-car-crash fa-stack-1x fa-inverse portfolio-hover-content"></i>
           </span>
           <h4 class="service-heading">Gestão de sinistros</h4>
-          <br/>
-          <p class="text-muted">Uma presença constante em todo o processo de sinistro</p>
+          <p class="section-subheading text-muted">Uma presença constante em todo o processo de sinistro</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
@@ -120,7 +119,7 @@
             <i class="fas fa-hands-helping fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Aconselhamento jurídico</h4>
-          <p class="text-muted">Informamos, ajudamos e aconcelhamos dos seus direitos.</p>
+          <p class="section-subheading text-muted">Informamos, ajudamos e aconcelhamos dos seus direitos.</p>
         </div>
       </div>
     </div>
@@ -144,8 +143,7 @@
                 <i class="icon-hover fas fa-car text-primary" ></i>
               </div>
             </div>
-            <h3 class="h4 mb-2">Automovel</h3>
-            <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
+            <h3 class="h4 mb-2 mt-2">Automovel</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center portfolio-item" data-item="Habitacao" data-toggle="modal" data-target="#portfolioModal">
@@ -155,8 +153,7 @@
               <i class="icon-first fas fa-house-damage text-primary " ></i>
               <i class="icon-hover fas fa-home text-primary " ></i>
             </div></div>
-            <h3 class="h4 mb-2">Habitação</h3>
-            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+            <h3 class="h4 mb-2 mt-2">Habitação</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center portfolio-item" data-item="AcidentesPessoais" data-toggle="modal" data-target="#portfolioModal">
@@ -165,8 +162,7 @@
               <i class="icon-first fas fa-diagnoses text-primary" ></i>
               <i class="icon-hover fas fa-hand-holding-medical text-primary " ></i>
             </div></div>
-            <h3 class="h4 mb-2">Acidentes Pessoais</h3>
-            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
+            <h3 class="h4 mb-2 mt-2">Acidentes Pessoais</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center portfolio-item" data-item="AcidentesDeTrabalho" data-toggle="modal" data-target="#portfolioModal">
@@ -175,8 +171,7 @@
               <i class="icon-first fas fa-user-injured text-primary"></i>
             <i class="icon-hover fas fa-people-carry text-primary "></i>
           </div></div>
-            <h3 class="h4 mb-2">Acidentes de Trabalho</h3>
-            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
+            <h3 class="h4 mb-2 mt-2">Acidentes de Trabalho</h3>
           </div>
         </div>
       </div>
@@ -187,8 +182,7 @@
                 <i class="icon-first fas fa-ambulance text-primary" ></i>
                 <i class="icon-hover fas fa-user-md text-primary" ></i>
               </div></div>
-              <h3 class="h4 mb-2">Saúde</h3>
-              <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
+              <h3 class="h4 mb-2 mt-2">Saúde</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center portfolio-item" data-item="Vida" data-toggle="modal" data-target="#portfolioModal">
@@ -197,8 +191,7 @@
                 <i class="icon-first fas fa-heart-broken text-primary" ></i>
                 <i class="icon-hover fas fa-hand-holding-heart text-primary" ></i>
               </div></div>
-              <h3 class="h4 mb-2">Vida</h3>
-              <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+              <h3 class="h4 mb-2 mt-2">Vida</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center portfolio-item" data-item="Viagem" data-toggle="modal" data-target="#portfolioModal">
@@ -207,8 +200,7 @@
                 <i class="icon-first fas fa-plane-slash text-primary" ></i>
                 <i class="icon-hover fas fa-globe-africa text-primary" ></i>
               </div></div>
-              <h3 class="h4 mb-2">Viagem</h3>
-              <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
+              <h3 class="h4 mb-2 mt-2">Viagem</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center portfolio-item" data-item="Outros" data-toggle="modal" data-target="#portfolioModal">
@@ -216,9 +208,8 @@
               <div class="icon-placer"><div class="icon">
                 <i class="icon-first fas fa-4x fa-comment-dots text-primary mb-4" ></i>
                 <i class="icon-hover fas fa-4x fa-plus text-primary mb-4" ></i>
-              <h3 class="h4 mb-2">Outros</h3>
               </div></div>
-              <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
+              <h3 class="h4 mb-2 mt-2">Outros</h3>
             </div>
           </div>
       </div>
@@ -276,10 +267,9 @@
 
   <section class="page-section" id="about">
     <div class="container">
-      <!--<div class="row">-->
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Sobre nós</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading text-muted">Uma equipa ao seu dispor</h3>
         </div>
       </div>
       <div class="row">
@@ -297,7 +287,7 @@
                 </div>
                 <div class="timeline-body">
                   <p class="text-muted">Empresa fundada em 1988. Somos profissionais eficazes com mais de 30 anos de experiencia à sua inteira disposição.
-                  A nossa dedicação não tem preço. Conte connosco.</p>
+                   <b>Conte connosco!</b></p>
                 </div>
               </div>    
             </li>
@@ -310,7 +300,7 @@
                   <h4>Pontos fortes</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Propomos soluções adequadas às necessidades de cada Cliente. Se preferir, deslocamo-nos a casa ou à sua empresa para conhecermos melhor a sua realidade.</p>
+                  <p class="text-muted">Propomos soluções adequadas às necessidades de cada Cliente. Se preferir, deslocamo-nos à sua casa ou à sua empresa para conhecermos melhor a sua realidade.</p>
                 </div>
               </div>
             </li>
@@ -325,7 +315,7 @@
                   <h4>Soluções disponíveis</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Estamos à vontade em seguros para particulares, bem como em seguros para empresas.</p>
+                  <p class="text-muted">Somos especialistas em seguros para particulares e em seguros para empresas.</p>
                   <!-- <p class="text-muted">RECOMENDAMOS: Aceite o nonselho. Seja em seguros novos ou na alteração de seguros que detenha, conte com a nossa experiência.</p> -->
                 </div>
               </div>
@@ -342,7 +332,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">ONDE ESTAMOS</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading text-muted">Temos sempre a porta aberta para si</h3>
         </div>
       </div>
       <div class="row">
@@ -474,7 +464,9 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Contactos</h2>
-          <h3 class="section-subheading text-muted">Entre em contacto</h3>
+          <h3 class="section-subheading text-muted" style="color: aliceblue !important;">Fique seguro de que encontraremos as melhores soluções para a sua realidade.
+            <span style="color: #99DFFD;"><p><b>Precisamos apenas de saber um pouco mais sobre si</b></p></span>
+          </h3>
         </div>
       </div>
       <div class="row">
@@ -504,7 +496,16 @@
                   <p class="help-block text-danger"></p>
                 </div>
               </div>
-              <div class="clearfix"></div>
+              <div class="form-group">
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" required value="" data-validation-required-message="É Necessario aceitar os termos">
+                  <label class="form-check-label" style="color: aliceblue;">
+                    A proteção da privacidade e dos dados pessoais é  um compromisso fundamental da nossa empresa para com os seus Clientes e utilizadores.
+  <p>Por favor consulte a nossa política de privacidade e confirme a sua aceitação antes de enviar o formulário.</p>
+                  </label>
+                </div>
+              </div>
+               <div class="clearfix"></div>
               <div class="col-lg-12 text-center">
                 <div id="success"></div>
                 <button id="sendMessageButton" name="send" value="Send" class="btn btn-primary btn-xl text-uppercase" >> Enviar</button>
