--- a/privacidade.html
+++ b/privacidade.html
@@ -2,9 +2,9 @@
     <div class="col-sm" style="border-right: grey 1px solid">
         <div class="container privacy">
             <h2>Política Privacidade</h2>
-            <p>A sua privacidade é importante para nós. É política do @WebSiteName respeitar a sua privacidade em
+            <p>A sua privacidade é importante para nós. É política do @MSL Mediadora de Seguros do Lima, Lda. respeitar a sua privacidade em
                 relação a qualquer
-                informação sua que possamos coletar no site <a href=http://www.WebSiteName.org>@WebSiteName</a>, e
+                informação sua que possamos coletar no site <a href=http://www.WebSiteName.org>@MSL Mediadora de Seguros do Lima, Lda.</a>, e
                 outros sites que
                 possuímos e operamos.</p>
             <p>Solicitamos informações pessoais apenas quando realmente precisamos delas para lhe fornecer um serviço.
@@ -32,7 +32,7 @@
                 informações pessoais. Se você tiver alguma dúvida sobre como lidamos com dados do usuário e informações
                 pessoais,
                 entre em contacto connosco.</p>
-            <h2>Política de Cookies @WebSiteName</h2>
+            <h2>Política de Cookies @MSL Mediadora de Seguros do Lima, Lda.</h2>
             <h3>O que são cookies?</h3>
             <p>Como é prática comum em quase todos os sites profissionais, este site usa cookies, que são pequenos
                 arquivos baixados
@@ -162,8 +162,8 @@
                     promoção que pode
                     fornecê-lo para fazer uma compra. </p>
           
-            <h3>Compromisso do Usuário</h3>
-            <p>O usuário se compromete a fazer uso adequado dos conteúdos e da informação que o @WebSiteName oferece no
+            <h3>Compromisso do Utilizador</h3>
+            <p>O usuário se compromete a fazer uso adequado dos conteúdos e da informação que o @MSL Mediadora de Seguros do Lima, Lda. oferece no
                 site e com
                 caráter enunciativo, mas não limitativo:</p>
              
@@ -171,7 +171,7 @@
                 <p>B) Não difundir propaganda ou conteúdo de natureza racista, xenofóbica, ou casas de apostas online
                     , jogos de sorte e azar, qualquer tipo de
                     pornografia ilegal, de apologia ao terrorismo ou contra os direitos humanos;</p>
-                <p>C) Não causar danos aos sistemas físicos (hardwares) e lógicos (softwares) do @WebSiteName, de seus
+                <p>C) Não causar danos aos sistemas físicos (hardwares) e lógicos (softwares) do @MSL Mediadora de Seguros do Lima, Lda., de seus
                     fornecedores
                     ou terceiros, para introduzir ou disseminar vírus informáticos ou quaisquer outros sistemas de
                     hardware ou
@@ -183,7 +183,7 @@
                 ou não, geralmente é mais seguro deixar os cookies ativados, caso interaja com um dos recursos que você
                 usa em nosso
                 site.</p>
-            <p>Esta política é efetiva a partir de <strong>May</strong>/<strong>2021</strong>.</p>
+            <p>Esta política é efetiva a partir de <strong>Agosto</strong>/<strong>2021</strong>.</p>
 
         </div>
     </div>
