--- a/Portfolio/Automovel.html
+++ b/Portfolio/Automovel.html
@@ -6,7 +6,7 @@
                 <i class="fas fa-4x fa-car text-primary mb-4"></i>
                 <h3 class="text-uppercase">Automóvel</h3>
                 <p class="item-intro text-muted">Seguro obrigatório.</p>
-                <p>O condutor de um veículo é responsável por todos os danos que possa causar na circulação rodoviária, nomeadamente em caso de acidente que resulta muitas vezes em quantias elevadas.</p>
+                <p>O condutor de um veículo é responsável por todos os danos que possa causar na circulação rodoviária em caso de acidente que resulta muitas vezes em quantias elevadas.</p>
                 <p>O seguro automóvel pretende proteger os lesados para que todos os prejuízos sejam pagos independentemente de o responsável pelo acidente ter ou não condições financeiras para o fazer.</p>
                 
                 <a class=" js-scroll-trigger showhide btn btn-primary" href="#contact">
