--- a/Portfolio/Outros.html
+++ b/Portfolio/Outros.html
@@ -12,6 +12,7 @@
                 <li style="list-style: disc;">Seguro de transportes</li>
                 <li style="list-style: disc;">Seguro BIKE</li>
                 <li style="list-style: disc;">Seguro Embarcações</li>
+                <li style="list-style: disc;">Outros</li>
             </ul>
             <a class=" js-scroll-trigger showhide btn btn-primary" href="#contact">
                 <i class="fas fa-angle-right"></i>
