--- a/Portfolio/AcidentesDeTrabalho.html
+++ b/Portfolio/AcidentesDeTrabalho.html
@@ -5,7 +5,7 @@
             <!-- Project Details Go Here -->
             <i class="fas fa-4x fa-people-carry text-primary mb-4"></i>
             <h3 class="text-uppercase">ACIDENTES de TRABALHO</h3>
-            <p>O seguro de acidentes de trabalho visa assegurar os trabalhadores por conta de outrem e trabalhadores independentes e aos seus familiares condições adquadas de reparação dos danos decorrentes de acidentes de trabalho.</p>
+            <p>O seguro de acidentes de trabalho visa assegurar aos trabalhadores por conta de outrem e trabalhadores independentes e aos seus familiares condições adquadas de reparação dos danos decorrentes de acidentes de trabalho.</p>
             <a class=" js-scroll-trigger showhide btn btn-primary" href="#contact">
                 <i class="fas fa-angle-right"></i>
                 Simulação</button>
