--- a/Portfolio/Vida.html
+++ b/Portfolio/Vida.html
@@ -5,7 +5,7 @@
             <!-- Project Details Go Here -->
             <i class="fas fa-4x fa-hand-holding-heart  text-primary mb-4"></i>
             <h3 class="text-uppercase">vida</h3>
-            <p>O seguro de vida surge como forma de prevenir consequências de grande impacto na vida dos cidadãos indemnizando os beneficiários os custos acrescidos resultantes dos danos de morte, invalidez ou acidente.</p>
+            <p>O seguro de vida surge como forma de prevenir consequências de grande impacto na vida dos cidadãos indemnizando os beneficiários dos custos acrescidos resultantes de morte, invalidez ou acidente.</p>
             <a class=" js-scroll-trigger showhide btn btn-primary" href="#contact">
                 <i class="fas fa-angle-right"></i>
                 Simulação</button>
