fix checkbox validation

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
               </div>
               <div class="form-group">
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox" required value=""
+                  <input class="form-check-input" type="checkbox" required 
                     data-validation-required-message="É Necessario aceitar os termos">
                   <label class="form-check-label" style="color: aliceblue;">
                     A proteção da privacidade e dos dados pessoais é um compromisso fundamental da nossa empresa para
@@ -551,6 +551,7 @@
                     <p>Por favor consulte a nossa política de privacidade e confirme a sua aceitação antes de enviar o
                       formulário.</p>
                   </label>
+                  <p class="help-block text-danger"></p>
                 </div>
               </div>
               <div class="clearfix"></div>
