--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="css/agency.css" rel="stylesheet">
-  <link href="css/msl.css" rel="stylesheet">
+  <link href="css/agency.min.css" rel="stylesheet">
+  <link href="css/msl.min.css" rel="stylesheet">
 
   <!--Particules CSS-->
-  <link rel="stylesheet" media="screen" href="css/style.css">
+  <link rel="stylesheet" media="screen" href="css/style.min.css">
 
 
 </head>
@@ -616,17 +616,17 @@
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Contact form JavaScript -->
-  <script src="js/jqBootstrapValidation.js"></script>
-  <script src="js/contact_me.js"></script>
+  <script src="js/jqBootstrapValidation.min.js"></script>
+  <script src="js/contact_me.min.js"></script>
   <!-- Script from Vendor-->
-  <script src="js/agency.js"></script>
+  <script src="js/agency.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="js/mslweb.js"></script>
+  <script src="js/mslweb.min.js"></script>
 
   <!-- scripts -->
-  <script src="js/particles.js"></script>
-  <script src="js/app.js"></script>
+  <script src="js/particles.min.js"></script>
+  <script src="js/app.min.js"></script>
 
 </body>
 
