--- a/index.html
+++ b/index.html
@@ -568,12 +568,16 @@
   </section>
   <!-- Footer -->
   <footer class="footer">
-    <div class="container">
+    <div class="">
       <div class="row align-items-center">
-        <div class="col-md-7">
+        <div class="col-md-3">
+          <div id="wcb" class="carbonbadge"></div>
+          <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
+        </div>
+        <div class="col-md-6">
           <span class="copyright">MSL Mediadora de Seguros do Lima, Lda 2019. Todos os direitos reservados</span>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <ul class="list-inline quicklinks">
             <li class="list-inline-item">
               <div class="modelLoader" data-item="privacidade" data-toggle="modal" data-target="#portfolioModal">
