fix minor messages

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <i class="fas fa-hands-helping fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Aconselhamento jurídico</h4>
-          <p class="section-subheading text-muted">Informamos, ajudamos e aconcelhamos dos seus direitos.</p>
+          <p class="section-subheading text-muted">Informamos, ajudamos e aconselhamos dos seus direitos.</p>
         </div>
       </div>
     </div>
@@ -515,18 +515,18 @@
               <div class="col-md-6">
                 <div class="form-group">
                   <input class="form-control" id="name" type="text" placeholder="Nome Completo" required="required"
-                    data-validation-required-message="É Necessario introduzir o Nome">
+                    data-validation-required-message="É necessario introduzir o Nome">
                   <p class="help-block text-danger"></p>
                 </div>
                 <div class="form-group">
                   <input class="form-control" id="email" type="email" placeholder="Email" required="required"
-                    data-validation-required-message="É Necessario introduzir o Email"
-                    data-validator-validemail-message="É Necessario introduzir o Email valido">
+                    data-validation-required-message="É necessario introduzir o Email"
+                    data-validator-validemail-message="É necessario introduzir o Email valido">
                   <p class="help-block text-danger"></p>
                 </div>
                 <div class="form-group">
                   <input class="form-control" id="phone" type="tel" placeholder="Telefone/Telemovel" required="required"
-                    data-validation-required-message="É Necessario introduzir o numero Telefone/Telemovel">
+                    data-validation-required-message="É necessario introduzir o numero Telefone/Telemovel">
                   <p class="help-block text-danger"></p>
                 </div>
                 <div class="form-group">
@@ -537,18 +537,18 @@
               <div class="col-md-6">
                 <div class="form-group">
                   <textarea class="form-control" id="message" placeholder="Deixe a sua mensagem" required="required"
-                    data-validation-required-message="É Necessario introduzir a Mensagem"></textarea>
+                    data-validation-required-message="É necessario introduzir a Mensagem"></textarea>
                   <p class="help-block text-danger"></p>
                 </div>
               </div>
               <div class="form-group">
-                <div class="form-check">
+                <div class="form-check" style="padding-left: 35px;">
                   <input class="form-check-input" type="checkbox" required 
-                    data-validation-required-message="É Necessario aceitar os termos">
+                    data-validation-required-message="É necessario aceitar os termos da Política de Privacidade para proceder ao envio do formulário">
                   <label class="form-check-label" style="color: aliceblue;">
                     A proteção da privacidade e dos dados pessoais é um compromisso fundamental da nossa empresa para
                     com os seus Clientes e utilizadores.
-                    <p>Por favor consulte a nossa política de privacidade e confirme a sua aceitação antes de enviar o
+                    <p>Por favor consulte a nossa <b>Política de Privacidade</b> e confirme a sua aceitação antes de enviar o
                       formulário.</p>
                   </label>
                   <p class="help-block text-danger"></p>
@@ -577,7 +577,7 @@
         <div class="col-md-6">
           <span class="copyright">MSL Mediadora de Seguros do Lima, Lda 2019. Todos os direitos reservados</span>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" style="padding-left: 0px;">
           <ul class="list-inline quicklinks">
             <li class="list-inline-item">
               <div class="modelLoader" data-item="privacidade" data-toggle="modal" data-target="#portfolioModal">
